@@ -29,11 +29,18 @@ pull-from-giant:
 #push-tags:	
 #	git push --tags ssh://git-keiju@www.sota.me/var/www/html/fairy/fairy.git
 
+# gem
+gem:	
+	@f=`gem build deep-connect.gemspec | sed -n "s/ *File: *//p"`; \
+	echo gem build: $$f; \
+	mv $$f Packages
+#
+#
+# doc
 doc: doc/deep-connect.html
 
 doc/deep-connect.html: doc/deep-connect.rd
 	env RUBYLIB= RUBYOPT= rd2 -rrd/rd2html-lib --html-title="DeepConnect"  doc/deep-connect.rd > doc/deep-connect.html
-
 
 # tar archives
 TGZ_FILES = $(SRCS)
