@@ -1,3 +1,8 @@
+Fri Nov 12 17:57:34 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
+
+	* Makefile: gemタグ追加
+	* deep-connect.gemspec: バージョン部分変更
+
 Thu Nov 11 00:00:13 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
 
 	* README: 追加
